tests/test-files/parse-the.txt
================================================================================
Malformed the expression
================================================================================

(package test-package)

(define x (the))

--------------------------------------------------------------------------------

error: Malformed the expression
  --> test:3:15
   |
 3 |  (define x (the))
   |                ^ expected type

================================================================================
Malformed the expression
================================================================================

(package test-package)

(define x (the (T -> T)))

--------------------------------------------------------------------------------

error: Malformed the expression
  --> test:3:24
   |
 3 |  (define x (the (T -> T)))
   |                         ^ expected value

================================================================================
Malformed the expression
================================================================================

(package test-package)

(define x (the (T -> T) y z))

--------------------------------------------------------------------------------

error: Malformed the expression
  --> test:3:26
   |
 3 |  (define x (the (T -> T) y z))
   |                            ^ unexpected trailing form
